--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-date-picker": "^7.5.0",
+    "react-datetime-picker": "^2.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
